2004-06-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/benchmark.c
    Added benchmark program.

2004-05-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/callback_test.c
    Improve callback_test to find input/output length mismatches. This also
    catches the bug Mark Deggeller reported.

2004-05-25  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Fix a bug in src_callback_read() reported by Mark Deggeller. Data retreived
    but not used during one call to src_callback_read() must be saved for the
    next call.

    * src/common.h
    Add fields saved_frames and saved_data to SF_PRIVATE struct for storing
    data between sucessive calls to src_callback_read().
    Also rearange the fields of SF_PRIVATE.

2004-03-20  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Use AC_HELP_STRING in AC_ARG_ENABLE statements.

2004-03-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * Win32/config.h Win32/sndfile.h
    Updates for Win32.

2004-02-19  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * NEWS README
    Finally got around to adding text to these.

    * doc/win32.html doc/history.html
    Minor updates.

2004-01-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.h
    Changed allowed SRC ratio to range [1/256, 256].

    * configure.ac tests/snr_bw_test.c tests/src-evaluate.c tests/Makefile.am
    Use FFTW3 instead of version 2.

2003-12-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/api.html doc/api_misc.html
    Add documentation for conversions functions.

    * doc/faq.html
    Add Q/A about detecting presence of libsamplerate.

2003-12-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h src/samplerate.c
    Added functions for short->float and float->short conversions on arrays
    of data. This will make it a little easier for people who need the